<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_background"
    tools:context=".MenuActivity">

    <View
        android:id="@+id/view11"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSalir2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:onClick="salir"
        android:text="@string/salir"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:text="Menú" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view11"
        app:srcCompat="@drawable/smartvaccumcleanerlogo" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonComenzarPomodoro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ic_launcher_pomodoro_background"
                android:onClick="comenzarRutina"
                android:text="@string/comenzar_rutina"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                app:icon="@android:drawable/ic_media_play"
                app:iconTint="@color/purple_700" />

            <Button
                android:id="@+id/buttonEditarPomodoros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ic_launcher_pomodoro_background"
                android:onClick="editarRutinas"
                android:text="@string/editar_rutinas"
                android:textColor="@color/purple_700"
                app:icon="@android:drawable/ic_menu_edit"
                app:iconTint="@color/purple_700" />

            <Button
                android:id="@+id/buttonCalendario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ic_launcher_pomodoro_background"
                android:onClick="calendario"
                android:text="@string/calendario_de_sesiones"
                android:textColor="@color/purple_700"
                app:icon="@android:drawable/ic_menu_agenda"
                app:iconTint="@color/purple_700" />

            <Button
                android:id="@+id/buttonPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ic_launcher_pomodoro_background"
                android:onClick="perfil"
                android:text="@string/perfil"
                android:textColor="@color/purple_700"
                app:icon="@android:drawable/ic_dialog_info"
                app:iconTint="@color/purple_700" />

            <Button
                android:id="@+id/buttonConfiguracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ic_launcher_pomodoro_background"
                android:onClick="configuracion"
                android:text="@string/configuracion"
                android:textColor="@color/purple_700"
                app:icon="@android:drawable/ic_menu_manage"
                app:iconTint="@color/purple_700" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>